syntax = "proto3";

package api.customer_service.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/customer_service/v1;v1";

// CustomerService 客户服务服务定义了所有与客户服务相关的RPC接口。
service CustomerService {
  // --- 核心客户服务接口 ---

  // CreateTicket 创建一个新客户服务工单。
  rpc CreateTicket(CreateTicketRequest) returns (TicketResponse);
  // GetTicketByID 根据工单ID获取工单信息。
  rpc GetTicketByID(GetTicketByIDRequest) returns (TicketResponse);
  // UpdateTicketStatus 更新工单状态。
  rpc UpdateTicketStatus(UpdateTicketStatusRequest) returns (TicketResponse);
  // AddMessageToTicket 向工单添加消息。
  rpc AddMessageToTicket(AddMessageToTicketRequest) returns (TicketMessageResponse);
  // GetTicketMessages 获取工单的所有消息。
  rpc GetTicketMessages(GetTicketMessagesRequest) returns (GetTicketMessagesResponse);
}

// --- 消息定义 ---

// TicketInfo 代表客户服务工单信息。
message TicketInfo {
  uint64 ticket_id = 1; // 工单ID
  uint64 user_id = 2; // 用户ID
  string subject = 3; // 主题
  string description = 4; // 描述
  string status = 5; // 状态 (e.g., OPEN, IN_PROGRESS, RESOLVED, CLOSED)
  google.protobuf.Timestamp created_at = 6; // 创建时间
  google.protobuf.Timestamp updated_at = 7; // 更新时间
}

// TicketMessage 代表工单中的一条消息。
message TicketMessage {
  uint64 message_id = 1; // 消息ID
  uint64 ticket_id = 2; // 工单ID
  uint64 sender_id = 3; // 发送者ID (用户或客服)
  string sender_type = 4; // 发送者类型 (USER, AGENT)
  string message_body = 5; // 消息内容
  google.protobuf.Timestamp sent_at = 6; // sent在
}

// CreateTicketRequest 创建工单请求消息。
message CreateTicketRequest {
  uint64 user_id = 1; // 用户唯一标识
  string subject = 2; // 主题
  string description = 3; // 描述
}

// TicketResponse 工单响应消息。
message TicketResponse {
  TicketInfo ticket = 1; // 工单
}

// GetTicketByIDRequest 获取工单信息请求。
message GetTicketByIDRequest {
  uint64 ticket_id = 1; // 工单ID
}

// UpdateTicketStatusRequest 更新工单状态请求。
message UpdateTicketStatusRequest {
  uint64 ticket_id = 1; // 工单ID
  string status = 2; // 状态
}

// AddMessageToTicketRequest 添加消息到工单请求。
message AddMessageToTicketRequest {
  uint64 ticket_id = 1; // 工单ID
  uint64 sender_id = 2; // 发送者ID
  string sender_type = 3; // sender类型
  string message_body = 4; // 消息正文
}

// TicketMessageResponse 消息响应消息。
message TicketMessageResponse {
  TicketMessage message = 1; // 消息
}

// GetTicketMessagesRequest 获取工单消息请求。
message GetTicketMessagesRequest {
  uint64 ticket_id = 1; // 工单ID
}

// GetTicketMessagesResponse 获取工单消息响应。
message GetTicketMessagesResponse {
  repeated TicketMessage messages = 1; // 消息列表
}